购物车删除项目

--- a/MIS/.settings/org.eclipse.core.resources.prefs
+++ b/MIS/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/dyy/servvlet/BuyServlet.java=UTF-8
 encoding//src/com/dyy/servvlet/ListServlet.java=UTF-8
+encoding//src/com/dyy/servvlet/Login.java=UTF-8
